--- a/products/templates/all_shopping_lists.html
+++ b/products/templates/all_shopping_lists.html
@@ -41,7 +41,7 @@
                             <td>
                                 <form action="{% url 'details' x.id %}">
                                      {% csrf_token %}
-                                    <input type="submit" value="Otwórz listę">
+                                    <input type="submit" class="btn btn-success" value="Otwórz listę">
                                 </form>
                             </td>
                         </tr>
