--- a/products/templates/all_products.html
+++ b/products/templates/all_products.html
@@ -86,6 +86,7 @@
                         {% endfor %}
                     </tbody>
                 </table>
+                <a href="{% url 'product_create' %}" class="btn btn-success">Dodaj nowy produkt</a>
             </div>
         </div>
     </div>
