--- a/products/templates/all_shopping_lists.html
+++ b/products/templates/all_shopping_lists.html
@@ -30,7 +30,7 @@
         <div class="card card-main">
             <div class="card-body">
                 <h1>Moje listy zakupów.</h1>
-                <table>
+                <table class="table">
                     <tr>
                         <th>Nazwa listy:</th>
                     </tr>
@@ -41,7 +41,9 @@
                             <td>
                                 <form action="{% url 'details' x.id %}">
                                      {% csrf_token %}
+                                    {% if user.is_authenticated %}
                                     <input type="submit" class="btn btn-success" value="Otwórz listę">
+                                    {% endif %}
                                 </form>
                             </td>
                         </tr>
