--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -42,7 +42,7 @@
                     <br>
 
                     {% for field in login_form %}
-                        {% for error in field.errors %}
+                        {% for error in field_errors %}
                         <p style="color: red">{{ error }}</p>
                         {% endfor %}
                     {% endfor %}
