--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -62,8 +62,10 @@
                     </div>
                     {% endif %}
 
-                    <button class="btn btn-lg btn-primary btn-block" type="submit">Zarejestruj się</button>
+                    <button class="btn btn-lg btn-primary btn-block mb-4" type="submit">Zarejestruj się</button>
                 </form>
+                <a href="{% url 'login' %}" class="p-2 text-dark">Mam już konto. Zaloguj się</a>
+                <br>
             </div>
         </div>
     </div>
